tests/miniJava/neg/006145_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { public System.out.println ( { } ) ; } }
